<resources>
    <string name="app_name">Capstone</string>
    <string name="to_login">To Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account_login_here">Have Account? Login Here!</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="show_password">Show Password</string>
    <string name="capture_image">capture image</string>
    <string name="switch_camera">switch camera</string>
    <string name="gallery">gallery</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile">Profile</string>
    <string name="barber">Barber</string>
    <string name="hair_style">Hair Style</string>
    <string name="home">Home</string>
    <string name="title_activity_barber">BarberActivity</string>
    <string name="smartcut">SMARTCUT</string>
    <string name="hair_style_detail">Hair Style Detail</string>
    <string name="hair_style_detail_name">Hair Style Detail Name</string>
    <string name="style">Style:</string>
    <string name="hair_style_description">Hair Style Description</string>
    <string name="predict">Predict</string>
    <string name="predict_result_photo">Predict Result Photo</string>
    <string name="predict_result">Predict Result</string>
    <string name="_70">70%</string>
    <string name="find_barber">Find Barber</string>
    <string name="logout">logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome">Welcome,</string>
    <string name="hot_now">Hot Now!</string>
    <string name="hair_style_rec">5 Hair Style for You</string>
</resources>