<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.HairStyleDetailActivity">

    <TextView
        android:id="@+id/tv_hair_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:text="@string/hair_style_detail_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_hair_detail"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@id/tv_hair_detail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/hair_style_detail"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_hair_detail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/style"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_below="@id/tv_style"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/hair_style_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>