<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:padding="5dp"
        android:contentDescription="@string/profile"
        android:background="@drawable/circle_border"
        android:src="@drawable/donat_kegigit" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_profile"
        android:layout_marginStart="57dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.smartcut.CustomView.EditTextUsername
        android:id="@+id/edt_profile_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@id/tv_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:background="@drawable/edittext_border"
        android:backgroundTint="@color/white"
        android:padding="8dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_profile_name"
        android:layout_marginStart="57dp"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.smartcut.CustomView.EditTextEmail
        android:id="@+id/edt_profile_email"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@id/tv_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        android:backgroundTint="@color/white"
        android:padding="8dp"
        android:hint="@string/email"
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_profile_email"
        android:layout_marginStart="57dp"
        android:layout_marginTop="15dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.smartcut.CustomView.EditTextPhoneNumber
        android:id="@+id/edt_profile_phone"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@id/tv_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        android:backgroundTint="@color/white"
        android:padding="8dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textSize="20sp" />

</RelativeLayout>