<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.HomeFragment">

    <RelativeLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.HomeFragment">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_welcome_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_welcome"
            android:layout_marginStart="20dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_below="@+id/tv_welcome_name"
            android:layout_margin="20dp"
            app:iss_auto_cycle="true"
            app:iss_corner_radius="20"
            app:iss_delay="0"
            app:iss_period="2000"
            app:iss_text_align="CENTER" />

        <TextView
            android:id="@+id/tv_hotnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_slider"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"

            android:text="@string/hot_now"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:layout_below="@id/tv_hotnow"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:listitem="@layout/item_hot_now" />
    </RelativeLayout>
</ScrollView>